# C-plus-plus-software-engineering

./: .gitignore  README.md  cpp_software_engineering.pptx
docs/: README.md
source-code/: .gitignore  README.md
source-code/catch2/Fac/: CMakeLists.txt  README.md
source-code/catch2/FacBDD/: CMakeLists.txt  README.md
source-code/catch2/Fixtures/: CMakeLists.txt
source-code/catch2/FixturesBDD/: CMakeLists.txt
source-code/catch2/Matchers/: CMakeLists.txt
source-code/catch2/Pi/: README.md
source-code/cmake/: README.md
source-code/cmake/blas-lapack/: README.md
source-code/cmake/blas-lapack/mkl/: CMakeLists.txt  README.md  sgemm.cpp
source-code/cmake/blas-lapack/mkl-specific/: CMakeLists.txt  README.md  sgemm.cpp
source-code/cmake/blas-lapack/openblas/: CMakeLists.txt  README.md  sgemm.cpp
source-code/cmake/boost/: CMakeLists.txt  README.md
source-code/cmake/external-library/: README.md
source-code/cmake/external-library/src/: CMakeLists.txt
source-code/cmake/mixed-code-and-scripts-install/: CMakeLists.txt  README.md
source-code/cmake/mixed-code-and-scripts-install/sample_data/: data.csv
source-code/cmake/mixed-code-and-scripts-install/scripts/: CMakeLists.txt  select_column.py
source-code/cmake/mixed-code-and-scripts-install/scripts/utils/: csv_utils.py
source-code/cmake/mixed-code-and-scripts-install/src/: CMakeLists.txt
source-code/cmake/openmp/: CMakeLists.txt  compute_pi.cpp
source-code/cmake/simple/: CMakeLists.txt  README.md
source-code/cmake/static-build/: README.md
source-code/cmake/static-build/src/: CMakeLists.txt
source-code/cmake/tbb/: CMakeLists.txt  plot_julia.sh
source-code/ctest/: README.md
source-code/dependency-management/: README.md
source-code/dependency-management/conan/: CMakeLists.txt  README.md  blaze_test.cpp  conanfile.txt
source-code/dependency-management/cpm/: README.md
source-code/dependency-management/cpm/fmt/: README.md
source-code/design-patterns/: README.md
source-code/design-patterns/builder/: CMakeLists.txt  README.md  rng_builder.cpp
source-code/design-patterns/factory/: CMakeLists.txt  README.md  circle.cpp  circle.h  circle_factory.cpp  circle_factory.h  circle_overlap.cpp  random_circles.cpp
source-code/design-patterns/strategy/: .depend  CMakeLists.txt  README.md  automaton_runner.cpp  automaton_runner.h  cycle_finder.cpp  cycle_finder.h  main.cpp
source-code/doxygen/src/: CMakeLists.txt
source-code/error-handling/: README.md
source-code/solid/: README.md
source-code/solid/liskov/: README.md
source-code/solid/liskov/counter/: README.md
source-code/solid/liskov/counter/base_case/: README.md  absolute_counter.cpp  absolute_counter.h  counter_main.cpp  relative_counter.h  utils.h
source-code/solid/liskov/counter/templates/: CMakeLists.txt  README.md  absolute_counter.h  counter.h  counter_main.cpp  relative_counter.h
source-code/solid/liskov/counter/violation/: CMakeLists.txt  README.md  absolute_counter.cpp  absolute_counter.h  counter.cpp  data.txt  relative_counter.cpp  relative_counter.h  utils.cpp
source-code/static-analysis/: README.md
source-code/static-build/: CMakeLists.txt  README.md
source-code/testing/: README.md
source-code/testing/catch2/: README.md
source-code/testing/catch2/fac/: test_fac.cpp
source-code/testing/catch2/fac-bdd/: CMakeLists.txt  README.md
source-code/testing/catch2/fixtures/: README.md
source-code/testing/catch2/fixtures-bdd/: README.md
source-code/testing/catch2/matchers/: README.md
source-code/testing/catch2/pi/: CMakeLists.txt
source-code/testing/ctest/: README.md
source-code/testing/google_test/: CMakeLists.txt  README.md  fib.cpp  fib.h  test_fib.cpp
